# cloudsyncbackup

./: .gitignore  CMakeLists.txt  README.md  backup_log.db  build.sh  config.json  events_log.json  mydata.db  run.sh  test.cpp
a.out.dSYM/Contents/Resources/DWARF/: a.out
backup_storage/: backup_20250403_005124.db
docs/: cpp_compiler_error_cheatsheet.md  threading_architecture.md
include/: backup.hpp  cli_parser.hpp  config.hpp  database.hpp  emoji.hpp  event_bus.hpp  event_recorder.hpp  logger.hpp  restore.hpp
include/threading/: backup_worker.hpp  task_queue.hpp
legacy/: notes_schema.sql
src/: backup.cpp  cli_parser.cpp  config.cpp  database.cpp  event_recorder.cpp  logger.cpp  main.cpp  restore.cpp  test_backup_worker.cpp  test_main_backup.cpp  test_main_cli.cpp  test_task_queue.cpp
src/threading/: backup_worker.cpp
